<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_biodata">

    <LinearLayout
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_1_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_2_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_3_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_4_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_5_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas_6_Mutia"
            android:textColor="@color/text_biodata"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</ScrollView>
