<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/butterflyImage1"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_gravity="top|end"
            android:layout_margin="16dp"
            android:src="@drawable/butterfly"
            android:contentDescription="@string/butterfly_desc" />

        <ImageView
            android:id="@+id/butterflyImage3"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="top|end"
            android:layout_margin="16dp"
            android:src="@drawable/butterfly"
            android:contentDescription="@string/butterfly_desc" />

        <ImageView
            android:id="@+id/butterflyImage2"
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_gravity="top|end"
            android:layout_margin="16dp"
            android:src="@drawable/butterfly"
            android:contentDescription="@string/butterfly_desc" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp">

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Nama_Filzah"
                android:textSize="18sp"
                android:textColor="@color/text_biodata" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp">

            <TextView
                android:id="@+id/tvNim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Nim_Filzah"
                android:textSize="18sp"
                android:textColor="@color/text_biodata" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp">

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Alamat_Filzah"
                android:textSize="18sp"
                android:textColor="@color/text_biodata" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Email_Filzah"
                android:textSize="18sp"
                android:textColor="@color/text_biodata" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="6dp">

            <TextView
                android:id="@+id/tvTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/Telepon_Filzah"
                android:textSize="18sp"
                android:textColor="@color/text_biodata" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>

